--- a/login.html
+++ b/login.html
@@ -38,15 +38,12 @@
                 </div>
             </div>
             <div class="texto-principal">
-                <form action="phpindex.php" method="POST" onsubmit="return validar();">
-                    <h2>contacto</h2>
-                        <p>Nombre:</p><input type="text"id=nombre name="nombre" placeholder="Nombre" >
-                        <p>Apellido:</p><input type="text"id=apellido name="apellido" placeholder="Apellido" >
-                        <p>Correo:</p><input type="text"id=correo name="correo" placeholder="Correo" >
-                        <p>Telefono:</p><input type="text"id=telefono name="telefono" placeholder="Telefono" >
-                        <p>Mensaje:</p><textarea id=mensajes name="mensajes" placeholder="Escriba aqui su mensaje..."></textarea>
-                        <input type="submit" value="Enviar" id="boton">
-                </form>
+				<h1>Login</h1>
+					<form action="login.php" method="post">
+						<input type="text" name="username" placeholder="usuario"><br>
+						<input type="password" name="password" placeholder="contraseña"><br>
+						<input type="submit" value="Ingresar" id="boton">
+					</form>
             </div>
         </header>
     </div>
@@ -59,4 +56,6 @@
     
 </body>
    
+</html>			
+	</body>
 </html>
