--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
             </div>
             <div class="texto-principal">
 				<h1>Login</h1>
-					<form action="login.php" method="post">
+					<form action="login.php" method="post" onsubmit="return validar();">
 						<input type="text" name="username" placeholder="usuario"><br>
 						<input type="password" name="password" placeholder="contraseña"><br>
 						<input type="submit" value="Ingresar" id="boton">
